# AMD_Robotics_Hackathon_2025_ProjectTemplate

./: README.md  goal.md
mission2/agent/: AgentTemplate.py  AgentTemplate.xircuits
mission2/agent/.ipynb_checkpoints/: AgentTemplate-checkpoint.xircuits
mission2/agent/.xircuits/: component_library_config.json
mission2/agent/xai_components/xai_agent/: README.md  agent_components.py  mcp_integration_plan.md  pyproject.toml  requirements.txt
mission2/agent/xai_components/xai_agent/.github/workflows/: run-workflow-tests.yml
mission2/agent/xai_components/xai_agent/examples/: agent_example.xircuits
mission2/agent/xai_components/xai_converse/: converse_components.py  pyproject.toml  requirements.txt
mission2/agent/xai_components/xai_lerobot/.ipynb_checkpoints/: lerobot_components-checkpoint.py
mission2/code/: capture_goal.py  demo.py  goal_conditioned_smolvla.py  inference.py  planner.py  prepare_goal_dataset.py  record_demonstrations.py  replay_demo.py  skill_executor.py  test_base_smolvla.py  test_policy.py  train_goal_conditioned.py  verify_environment.py
mission2/code/outputs/smolvla_place_rock/wandb/run-20251206_121437-lqy83s1x/files/: config.yaml  wandb-summary.json
mission2/code/outputs/smolvla_place_rock2/wandb/run-20251206_154724-ahzldd3c/files/: config.yaml  wandb-summary.json
mission2/ui/: app.py  main.py  pyproject.toml  readme.md
mission2/ui/static/: sketch.js
mission2/ui/static/assets/: README.md  karesansui_base64.txt  rock_base64.txt
mission2/ui/templates/: index.html
(+11 files in other folders)
